// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the CredentialsPage component When it is rendered and the path is /login Then it should match the snapshot 1`] = `
<app-credentials-page
  __ngContext__={[Function Number]}
  page={[Function String]}
  router={[Function Router]}
>
  <div
    class="credentials-page"
  >
    <img
      alt="A man working at a desk"
      src="../../../assets/svgs/workspace.svg"
    />
    <app-login-form
      class="credentials-page__form"
    >
      <form
        data-testid="form"
      >
        <h2>
          Log in to SharedSpace
        </h2>
        <div
          class="form-group"
        >
          <label
            for="username"
          >
            Username
          </label>
          <input
            autocomplete="off"
            formcontrolname="username"
            id="username"
            required=""
            type="text"
          />
        </div>
        <div
          class="form-group"
        >
          <label
            for="password"
          >
            Password
          </label>
          <input
            autocomplete="off"
            formcontrolname="password"
            id="password"
            required=""
            type="password"
          />
        </div>
        <app-button
          text="Login"
        >
          <button
            class="button button--big"
            disabled=""
            type="submit"
          >
            Login
          </button>
        </app-button>
        <span>
          Don't have an account? 
          <a
            href="/register"
            routerlink="/register"
          >
            Register here
          </a>
        </span>
      </form>
    </app-login-form>
  </div>
</app-credentials-page>
`;

exports[`Given the CredentialsPage component When it is rendered and the path is /register Then it should match the snapshot 1`] = `
<app-credentials-page
  __ngContext__={[Function Number]}
  page={[Function String]}
  router={[Function Router]}
>
  <div
    class="credentials-page"
  >
    <img
      alt="A man working at a desk"
      src="../../../assets/svgs/workspace.svg"
    />
    <app-register-form
      class="credentials-page__form"
    >
      <form
        data-testid="form"
      >
        <h2>
          Sign up for SharedSpace
        </h2>
        <div
          class="form-group"
        >
          <label
            for="username"
          >
            Username
          </label>
          <input
            autocomplete="off"
            formcontrolname="username"
            id="username"
            required=""
            type="text"
          />
        </div>
        <div
          class="form-group"
        >
          <label
            for="password"
          >
            Password
          </label>
          <input
            autocomplete="off"
            formcontrolname="password"
            id="password"
            required=""
            type="password"
          />
        </div>
        <div
          class="form-group"
        >
          <label
            for="confirmPassword"
          >
            Confirm password
          </label>
          <input
            autocomplete="off"
            formcontrolname="confirmPassword"
            id="confirmPassword"
            required=""
            type="password"
          />
        </div>
        <div
          class="form-group"
        >
          <label
            for="owner"
          >
            <input
              formcontrolname="owner"
              id="owner"
              name="owner"
              type="checkbox"
            />
            I want to offer a space
          </label>
        </div>
        <app-button
          text="Sign up"
        >
          <button
            class="button button--big"
            disabled=""
            type="submit"
          >
            Sign up
          </button>
        </app-button>
        <span>
          Already have an account? 
          <a
            href="/login"
            routerlink="/login"
          >
            Login here
          </a>
        </span>
      </form>
    </app-register-form>
  </div>
</app-credentials-page>
`;
